--- a/chansera/src/layouts/Layout.astro
+++ b/chansera/src/layouts/Layout.astro
@@ -1,9 +1,15 @@
+---
+// style import
+import "@/styles/starwind.css";
+---
+<!-- layout code... -->
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<Meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="stylesheet" href="url" type="text/css" media="screen" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
