--- a/chansera/src/layouts/Layout.astro
+++ b/chansera/src/layouts/Layout.astro
@@ -1,28 +1,30 @@
+<!-- src/layouts/Layout.astro -->
 ---
-// style import
-import "@/styles/starwind.css";
----
-<!-- layout code... -->
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<Meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="stylesheet" href="url" type="text/css" media="screen" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+import "../styles/starwind.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import BaseHead from "../components/BaseHead.astro";
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+interface Props{
+  title: string;
+  description: string;
+  image: string;
+  url: string;
+}
+const{title, description} = Astro.props;
+---
+
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <BaseHead title={title} description={description}/>
+  </head>
+  <body class="font-sans bg-white text-gray-800">
+    <Header title={title}/>
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </body>
+</html>
