--- a/chansera/src/pages/index.astro
+++ b/chansera/src/pages/index.astro
@@ -1,5 +1,11 @@
+<!-- src/pages/index.astro -->
 ---
+import Layout from "../layouts/Layout.astro";
 import "../styles/starwind.css";
 ---
 
-<h1 class="text-4xl text-red-950">Hello World!</h1>
+<Layout
+  title="Clínica Dental"
+  description="Tratamentos dentários personalizados com tecnologia de ponta."
+>
+</Layout>
