--- a/chansera/src/layouts/Layout.astro
+++ b/chansera/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 <!-- src/layouts/Layout.astro -->
 ---
-import "../styles/starwind.css";
+import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import BaseHead from "../components/BaseHead.astro";
