--- a/chansera/src/pages/index.astro
+++ b/chansera/src/pages/index.astro
@@ -1,7 +1,7 @@
 <!-- src/pages/index.astro -->
 ---
 import Layout from "../layouts/Layout.astro";
-import "../styles/starwind.css";
+import "../styles/global.css";
 ---
 
 <Layout
